# noita-eye-messages

./: .gitignore  Cargo.toml  LICENSE  build.rs  gdb.sh  profile.sh
.cargo/: config.toml
data/: all-original.csv
data/alphabets/: english.csv  english_ij_uv.csv  suomi.csv
data/ciphertext/: deinterlace-s2-0.csv  deinterlace-s2-1.csv  gctak-24-001.txt  gctak-24-practice-1.txt
data/frequency-distributions/: english.csv  suomi.csv
src/: codegen.rs  failed_ideas.rs  lib.rs  main.rs  messages.rs  utils.rs
src/analysis/: alphabet.rs  freq.rs  mod.rs  plot.rs  unit_freq.rs  unit_totals.rs
src/ciphers/: arx.rs  base.rs  mod.rs
src/commands/: crack.rs  mod.rs
src/data/: alphabet_io.rs  csv_export.rs  csv_import.rs  format_error.rs  key_dump.rs  language_io.rs  message.rs  message_io.rs  mod.rs  render_message.rs
src/proto/: README.md  arx.proto
src/utils/: compare.rs  data_import.rs  lazy.rs  message.rs  mod.rs  print.rs  run.rs  stackvec.rs  threading.rs  user_condition.rs
