[package]
name = "noita-eye-messages"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dataviz = "0.1.9"
fasteval = "0.2.4"
fontconfig = "0.10.0"
minifb = "0.28.0"
rug = { version = "1.28.0", default-features = false, features = ["integer"] }

[profile.release]
# for some reason thin lto has better performance on my machine
lto = "thin"
