[package]
name = "noita-eye-messages"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dataviz = "0.1.9"
fontconfig = "0.10.0"
hot-eval = { version = "0.0.4", git = "https://github.com/rafern/hot-eval-rs.git" }
minifb = "0.28.0"
prost = "0.14.1"
rug = { version = "1.28.0", default-features = false, features = ["integer", "rational"] }
smallvec = { version = "1.15.1", features = ["const_generics"] }
unicode-segmentation = "1.12.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
# for some reason thin lto has better performance on my machine
lto = "thin"
codegen-units = 1

# [patch."https://github.com/rafern/hot-eval-rs.git"]
# hot-eval = { path = "../hot-eval-rs" }